syntax = "proto3";

package grpchomework;

option go_package = "grpchomework/user-grpc";

service UserService {
    rpc Login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string message = 2;
}
